--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <body>
   
     <div class="container">
-      <h1>Who misses whom more?</h1>
+      <p>Who misses whom more?</p>
+      <h1></h1>
       <p>Press refresh to roll again.</p>
       
       
